--- a/index.html
+++ b/index.html
@@ -35,13 +35,17 @@
       <form action="#">
         <div class="input-box">
           <span class="icon"><ion-icon name="mail"></ion-icon></span>
-          <label>Email</label>
-          <input type="email" class="email" required />
+
+          <input type="email" class="email" required placeholder="Email" />
         </div>
         <div class="input-box">
           <span class="icon"><ion-icon name="lock-closed"></ion-icon></span>
-          <label>Password</label>
-          <input type="password" class="email" required />
+          <input
+            type="password"
+            class="email"
+            required
+            placeholder="Password"
+          />
         </div>
         <div class="remember-forgot">
           <label><input type="checkbox" />Remember me</label>
