--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <div class="login-register">
           <p>
             Don't have an account?
-            <a href="#" class="register-link">Register now!</a>
+            <a href="./signup.html" class="register-link">Register now!</a>
           </p>
         </div>
       </form>
