--- a/signup.html
+++ b/signup.html
@@ -41,7 +41,7 @@
                             <div id="inplab" class="ep">
                                 <div id="label">Enter Password</div>
                                 <div id="pwd"></div>
-                                    <input type="password" name="" id="input" placeholder="•••••••"> 
+                                    <input type="password" name="" id="input" placeholder="Enter Password"> 
                                     
                                 </div>
                             </div>
@@ -50,7 +50,7 @@
                             <div id="inplab">
                                 <div id="label">Confirm Password</div>
                                 <div id="pwd"></div>
-                                    <input type="password" name="" id="input" placeholder="•••••••"> 
+                                    <input type="password" name="" id="input" placeholder="Confirm Password"> 
                                   
                                 </div>
                             </div>
