--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
           <li><a href="#">Daily Excercises</a></li>
           <li><a href="#">Diet tracker</a></li>
           <li><a href="#">Your streak</a></li>
-          <li><a href="#">My Account</a></li>
+          <li><a href="./Index2.html">My Account</a></li>
         </ul>
       </div>
       <div class="content">
