--- a/Index2.html
+++ b/Index2.html
@@ -13,7 +13,7 @@
   <body>
     <div class="banner">
       <div class="navbar">
-        <a href="Index.html"><img src="Logo.png" class="logo" /></a>
+        <a href="./Index.html"><img src="Logo.png" class="logo" /></a>
       </div>
       <div class="user">
         <h1>My Account 👤</h1>
