--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <div class="navbar">
         <img src="Logo.png" class="logo" />
         <ul>
-          <li><a href="#">Daily Excercises</a></li>
+          <li><a href="./dailyExcercises.html">Daily Excercises</a></li>
           <li><a href="#">Diet tracker</a></li>
           <li><a href="#">Your streak</a></li>
           <li><a href="./Index2.html">My Account</a></li>
